--- a/一些建议.md
+++ b/一些建议.md
@@ -1,20 +1,25 @@
 # 六级考试备考指南
 
-个人认为，六级和四级真题几乎看不出任何区别
+博主高中的英语水平一般，新高考I卷131分，大学课下没有自学过英语
+
+第一次考六级时间2024.12，提前三天备考，450分勉强过线
+第二次考六级时间2025.06，提取一周备考，538分，自此六级毕业。
 
 
+
+个人认为，六级和四级真题几乎看不出任何区别，
 
 唯一需要提前准备的也是**单词**
 
-
-
-除了<u>A篇阅读</u>直接考察单词
-
-命题人会在<u>题干、选项、文章关键段落</u>设置各种生单词，影响你的理解和判断。
+除了<u>A篇阅读</u>直接考察单词，命题人会在<u>题干、选项、文章关键段落</u>设置各种生单词，影响你的理解和判断。
 
 个人感觉听力的选项有生单词，很可能会影响你理解的选项的意思，这就太要命了 :cry::fearful:
 
 
+
+**如果没时间看单词——**
+
+**不要紧，一定要在考前至少做一套原题。**
 
 
 
@@ -28,9 +33,10 @@
 
 **听力**
 在预读阶段，最好能通过选项，推断出这个片段的话题是什么，这样会好做很多；
-在听的阶段，如果很难听清，那就采取“听到什么选什么”的策略；
+在正式的听录音的阶段，如果很难听清，那就采取“听到什么选什么”的策略；
 如果什么都没听到，那就听问题，有些时候是能根据题目排除选项并选出正确答案的；😎
-作文写完，发现还有五分钟，这种时候你看不看听力？你死都得看：
+
+作文写完，发现还有五分钟，这种时候你看不看听力？你die都得看：
 
 ![](./Resources/OIP.jpg)
 
